@@ -653,6 +653,88 @@ name|createEmptyBorder
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// MacOS BigSur needs additional style tweaking for the tabs active state
+name|OSXVersion
+name|version
+init|=
+name|OSXVersion
+operator|.
+name|fromSystemProperties
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|version
+operator|.
+name|gt
+argument_list|(
+name|OSXVersion
+operator|.
+name|CATALINA
+argument_list|)
+condition|)
+block|{
+name|UIManager
+operator|.
+name|put
+argument_list|(
+literal|"TabbedPane.selectedTabTitlePressedColor"
+argument_list|,
+name|Color
+operator|.
+name|BLACK
+argument_list|)
+expr_stmt|;
+name|UIManager
+operator|.
+name|put
+argument_list|(
+literal|"TabbedPane.selectedTabTitleNormalColor"
+argument_list|,
+name|Color
+operator|.
+name|BLACK
+argument_list|)
+expr_stmt|;
+name|UIManager
+operator|.
+name|put
+argument_list|(
+literal|"TabbedPane.selectedTabTitleShadowDisabledColor"
+argument_list|,
+operator|new
+name|Color
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|UIManager
+operator|.
+name|put
+argument_list|(
+literal|"TabbedPane.selectedTabTitleShadowNormalColor"
+argument_list|,
+operator|new
+name|Color
+argument_list|(
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|Border
 name|backgroundPainter
 init|=
